--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-	"name": "twod",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"mathjs": "^13.0.1",
-		"svg-round-corners": "^0.4.3",
-		"voronoi": "^1.0.0",
-		"webmidi": "^3.1.9"
-	}
+  "name": "pitchgrid",
+  "version": "0.0.1",
+  "private": false,
+  "scripts": {
+    "dev": "sst bind vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "sst:deploy": "sst deploy",
+    "sst:dev": "sst dev"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.3",
+    "sst": "^2.43.3",
+    "aws-cdk-lib": "2.142.1",
+    "constructs": "10.3.0",
+    "svelte-kit-sst": "^2.43.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "mathjs": "^13.0.1",
+    "svg-round-corners": "^0.4.3",
+    "voronoi": "^1.0.0",
+    "webmidi": "^3.1.9"
+  }
 }
