--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   "dependencies": {
     "@svelteuidev/composables": "^0.15.7",
     "@svelteuidev/core": "^0.15.7",
+    "abcjs": "^6.4.3",
     "jzz": "^1.8.5",
     "jzz-synth-tiny": "^1.4.0",
+    "marked": "^14.1.2",
+    "marked-katex-extension": "^5.1.2",
     "mathjs": "^13.0.1",
     "radix-icons-svelte": "^1.2.1",
     "svelte-system-info": "^1.0.2",
