move from sst to vercel

--- a/package.json
+++ b/package.json
@@ -3,27 +3,20 @@
   "version": "0.2.0",
   "private": false,
   "scripts": {
-    "dev": "sst bind vite dev",
+    "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "sst:deploy": "sst deploy",
-    "sst:dev": "sst dev",
     "dev-x": "vite dev --host --port 3000"
   },
   "devDependencies": {
     "@bulatdashiev/svelte-slider": "^1.0.3",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-static": "^3.0.8",
+    "@sveltejs/adapter-vercel": "^5.4.4",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "aws-cdk-lib": "2.142.1",
-    "constructs": "10.3.0",
-    "sst": "^2.49.4",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
-    "svelte-kit-sst": "^2.43.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
